--- a/end.html
+++ b/end.html
@@ -33,9 +33,10 @@
             Save
           </button>
         </form>
-        <a href="/game.html" class="btn">Play again</a>
-        <a href="/" class="btn">Go home <i class="fas fa-home"></i></a>
+        <a href="game.html" class="btn">Play again</a>
+        <a href="index.html" class="btn">Go home <i class="fas fa-home"></i></a>
       </div>
     </div>
+    <script src="end.js"></script>
   </body>
 </html>
