--- a/highScores.html
+++ b/highScores.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Black History Quiz</title>
+    <title>High Scores</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="highScores.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
@@ -14,13 +15,12 @@
   </head>
   <body>
     <div class="container">
-      <div id="home" class="flex-column flex-centre">
-        <h1>How well do you know your black history?</h1>
-        <a href="game.html" class="btn">Play</a>
-        <a href="highscores.html" id="highscore-btn" class="btn"
-          >High Scores<i class="fas fa-crown"></i
-        ></a>
+      <div id="highScore" class="flex-center flex-column">
+        <h1 id="finalScore">Leaderboard</h1>
+        <ul id="highScoresList"></ul>
+        <a href="index.html" class="btn">Go Home<i class="fas fa-home"></i></a>
       </div>
     </div>
+    <script src="highScores.js"></script>
   </body>
 </html>
